examples/test/testpolicy8842.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8842
  namespace: namespace317
spec:
  podSelector:
    matchLabels:
      key28: value37
      key35: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value29
          key45: value46
          key0: value43
      podSelector:
        matchLabels:
          key48: value13
